# playlist-generator

./: .gitignore  poetry.toml  pyproject.toml
src/: test.ipynb
